# solum-dashboard

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  HACKING.rst  MANIFEST.in  README.md  README.rst  _50_solum.py.example  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
releasenotes/notes/: drop-py-2-7-241c1a021379927d.yaml
solumdashboard/: dashboard.py  exceptions.py  version.py
solumdashboard/api/: client.py
solumdashboard/applications/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
solumdashboard/applications/workflows/: __init__.py  create.py  launch.py  update.py
solumdashboard/assemblies/: panel.py  tables.py  tabs.py  urls.py  views.py
solumdashboard/common/: workflow_parsers.py
solumdashboard/languagepacks/: forms.py  panel.py  tables.py  urls.py  views.py
solumdashboard/locale/: django.pot  djangojs.pot
solumdashboard/locale/de/LC_MESSAGES/: django.po
solumdashboard/locale/en_GB/LC_MESSAGES/: django.po
solumdashboard/locale/id/LC_MESSAGES/: django.po
solumdashboard/locale/ko_KR/LC_MESSAGES/: django.po
solumdashboard/openstack/common/: importutils.py
solumdashboard/templates/applications/: _create.html  _create_general_help.html  _detail.html  _launch.html  _launch_configure_help.html  _log.html  _scale.html  create.html  detail.html  index.html  launch.html  scale.html
solumdashboard/templates/assemblies/: _detail.html  detail.html  index.html
solumdashboard/templates/languagepacks/: _create.html  _detail.html  create.html  detail.html  index.html
solumdashboard/tests/: settings.py
solumdashboard/tests/common/: test_workflow_parsers.py
solumdashboard/tests/unit/: test_solum.py
solumdashboard/utils/: importutils.py
