[metadata]
name = solum-dashboard
version = 1
summary = Solum Dashboard
description-file = README.rst
license = Apache Software License
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/solum

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    solumdashboard

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
